# rsomics-fastx-convert

./: Cargo.toml  README.md
benches/: bench.rs
src/: lib.rs  main.rs
tests/: compat.rs
tests/golden/: fx2tab.upstream.expected  test.fa  test.fq
