[package]
name = "rsomics-fastx-convert"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-fastx-convert"
authors = ["Zane Leong <efd@live.com>"]
description = "Convert between FASTA/FASTQ formats: fq2fa, fa2fq, fx2tab, tab2fx, Phred quality re-encoding"

[[bin]]
name = "rsomics-fastx-convert"
path = "src/main.rs"

[lib]
name = "rsomics_fastx_convert"
path = "src/lib.rs"
doctest = false

[[bench]]
name = "bench"
harness = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
rsomics-common = { version = "0.6" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
needletail = "0.6"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"
